Hadoop Change Log

Release 1.0.5 - unreleased

  NEW FEATURES

  IMPROVEMENTS

  BUG FIXES

    MAPREDUCE-4798. Updated TestJobHistoryServer test case for startup
    race conditions.  (Sam Liu via eyang)

Release 1.0.4 - 2012.10.02

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-7154. Should set MALLOC_ARENA_MAX in hadoop-env.sh
    (todd via mattf)
 
    MAPREDUCE-4399. Change the Jetty response buffer size to improve 
    shuffle performance. (Luke Lu via suresh)

  BUG FIXES

    HDFS-3652. FSEditLog failure removes the wrong edit stream when storage
    dirs have same name. (todd)

Release 1.0.3 - 2012.05.07

  NEW FEATURES

  IMPROVEMENTS

    MAPREDUCE-4017. Add jobname to jobsummary log (tgraves and Koji Noguchi
    via bobby)

  BUG FIXES

    HADOOP-6924. Adds a directory to the list of directories to search for 
    the libjvm.so file. The new directory is found by running a 'find' command
    and the first output is taken. This was done to handle the build of Hadoop
    with IBM's JDK. (Stephen Watt, Guillermo Cabrera and ddas) 

    HADOOP-6941. Adds support for building Hadoop with IBM's JDK
    (Stephen Watt, Eli and ddas)

    HADOOP-8188. Fixes the build process to do with jsvc, with IBM's JDK 
    as the underlying jdk. (ddas)

    HDFS-3127. Do not throw exceptions when FSImage.restoreStorageDirs() 
    fails. (Brandon Li via szetszwo)

    MAPREDUCE-3377. Ensure OutputCommitter.checkOutputSpecs is called prior to
    copying job.xml. (Jane Chen via acmurthy)

    HADOOP-5528. Ensure BinaryPartitioner is present in mapred libs. (Klaas
    Bosteels via acmurthy)

    HADOOP-6963. In FileUtil.getDU(..), neither include the size of directories
    nor follow symbolic links.  (Ravi Prakash via szetszwo)

    HADOOP-8251. Fix SecurityUtil.fetchServiceTicket after HADOOP-6941. (todd)

    HADOOP-8293. Fix the Makefile.am for the native library to include the
    JNI path. (omalley)
